Fix conflict and merge enhancements